--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Choi Byeongseon
-description: Robotics Engineer — M.Sc. Robotics (August 2024)
+title: Bezalel's Realization
+description: Where ideas become reality
 
 collections:
   projects:
