--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bezalel's Realization
-description: Where ideas become reality
+description: Translating ideas into reality
 
 collections:
   projects:
