--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Bezalel's Realization
-description: Translating ideas into reality
+title: Bezalel's Craft
+description: Where ideas become reality
 
 collections:
   projects:
